se arreglo ruta

--- a/screens/allProducts.html
+++ b/screens/allProducts.html
@@ -69,7 +69,7 @@
                 </div>
                 
             </div>    
-            <button class="menu__header-btn"><a href="screens/login.html">Login</a></button>        
+            <button class="menu__header-btn"><a href="../screens/login.html">Login</a></button>        
         </header>
     </section>
     <section class="banner">
